# diffusion-prompt-embedder

./: README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
src/diffusion_prompt_embedder/: __init__.py
src/diffusion_prompt_embedder/clip/: __init__.py  tokenization.py
src/diffusion_prompt_embedder/core/: __init__.py  embedding.py  parser.py
src/diffusion_prompt_embedder/core/sd15/: __init__.py  get_embeddings_sd15.py  get_embeddings_sd15_batch.py
src/prompt_parser/: __init__.py
tests/: test_batched_encoding_equivalence.py  test_clip_skip_layout.py  test_empty_prompt.py  test_prompt_parser.py
