[project]
name = "prompt-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jianqi Pan", email = "jannchie@gmail.com" }]
requires-python = ">=3.12.6"
dependencies = ["lark>=1.2.2", "numpy>=2.0.0", "torch>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 300
select = ["ALL"]

ignore = [
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "PLR2004", # Allow Magic Numbers 
    "INP001",  # Allow without __init__.py
    "N812",    # Allow aliased to non-lowercase names (e.g. `import torch.nn.functional as F`)
    "FBT003",  # Allow boolean positional values in function calls
    "S311",    # Allow use random
    "ANN401",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[project.optional-dependencies]
type = ["torch"]

[dependency-groups]
dev = ["pytest>=8.3.5"]
